--- a/material.html
+++ b/material.html
@@ -69,7 +69,7 @@
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
 				<!--<span>November 10, 2017</span>-->
-				<h2>Disciplinas 2º Semestre de 2021 ERE <br>CEFET-MG</h2>
+				<h2>Disciplinas 1º Semestre de 2022 <br>CEFET-MG</h2>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
@@ -77,7 +77,7 @@
 				<div class="fh5co-entry padding">
 					<div>
 						<ul>
-						<li><a href="gsi526.html"><i class="icon-home"></i><i> Engenharia de Software I (Teoria) <b>(Quinta: 10h40 - 12h20)</b></i></a></li> 
+						<li><a href="gsi526.html"><i class="icon-home"></i><i> Engenharia de Software I (Teoria) <b>(Segunda e Quinta: 10h40 - 12h20)</b></i></a></li> 
 						<li><a href="poo.html"><i class="icon-home"></i><i> Programação de Computadores 2 (Teoria) <b>(Terça: 13h00 - 14h40)</b></i></a></li>
 						<li><a href="gsi526-lab.html"><i class="icon-home"></i><i> Engenharia de Software I Lab. (Prática) <b>(Quarta: 08h50 - 10h40)</b></i></a></li> 
 						<li><a href="poo-lab.html"><i class="icon-home"></i><i> Programação de Computadores 2 Lab. (Prática) <b>(Quinta: 13h00 - 16h30)</b></i></a></li>
