--- a/poo-lab.html
+++ b/poo-lab.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2021 ERE - Engenharia Elétrica</span>
+				<span>Disciplinas 1º Semestre de 2022 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2 Lab.</h2>
 			</div>
 		</div>
@@ -79,29 +79,29 @@
 					<b>Plano e Grupos do Trabalho:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/plano_pc2_lab.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_lab.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_lab.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
 					</ul>
 					</div>
-					<div>
+					<!--<div>
 					<b>Monitoria:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>					
 					</ul>
-					</div>					
+					</div>-->					
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(25/11)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li>Trabalho 2 - 30 pts <b>(13/01)</b> <a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li>Trabalho 3 - 30 pts <b>(17/02)</b> <a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li>Exercícios Práticos - 10 pts <b>(10/02) </b> - Ex. 4, Ex. 5, Ex. 7 e Ex. 8 <img src="images/deadline.png"" alt="" height="25" width="19"></li>
+					<li>Trabalho 1 - 30 pts <b>(05/05)</b> <!--<a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li>Trabalho 2 - 30 pts <b>(02/06)</b> <!--<a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li>Trabalho 3 - 30 pts <b>(07/07)</b> <!--<a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li>Exercícios Práticos - 10 pts <b>(30/06)</b> <!-- Ex. 4, Ex. 5, Ex. 7 e Ex. 8 <img src="images/deadline.png"" alt="" height="25" width="19">--></li>
 					<!--<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
@@ -111,8 +111,8 @@
 					<div>					
 					<b>Material:</b> 
 					<ul>						
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/3s7G6f0yX2U"> Ver Videoaula </a>)</li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/q0ggF0xgcqU"> Ver Videoaula </a>)</li>					
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/3s7G6f0yX2U"> Ver Videoaula </a>)--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/q0ggF0xgcqU"> Ver Videoaula </a>)</li>					
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/PY5hcxTVCCg"> Ver Videoaula </a>)</li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gKJXrID8iEY"> Ver Videoaula </a>)</li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 5.pdf"> Exercício Prático 5</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/sRFBjxgZXBs"> Ver Videoaula </a>)</li>
@@ -120,48 +120,9 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/myKvJ2Mtgnw"> Ver Videoaula </a>)</li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/94g9WaSeh7s"> Ver Videoaula </a>)</li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/c4Oa0tHwTdE"> Ver Videoaula </a>)</li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Nc2W4q3h9E0"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/As_VeBHQLlo"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/3.Introdução a Java.ppt"> Aula 3 - Introdução a Java</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/4.Semântica de Referência.ppt"> Aula 4 - Semântica de Referência</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/5.Associação entre Objetos.ppt"> Aula 5 - Associação entre Objetos</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/6.Herança.ppt"> Aula 6 - Herança</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/7.Classes Abstratas e Interfaces.ppt"> Aula 7 - Classes Abstratas e Interfaces</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/8-Coleções.ppt"> Aula 8 - Coleções</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/9.Polimorfismo.ppt"> Aula 9 - Polimorfismo</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/11.Noções de UML.ppt"> Aula 11 - Noções de UML</a></li> -->
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula10 - Componentes_Implantacao.pdf"> Aula 10 - Diagramas de Componentes e Implantação</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula11 - Scrum.pdf"> Aula 11 - Scrum</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula12- Extreme Programming.pdf"> Aula 12 - Programação Extrema (XP)</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_modelagem_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"><b> Notas Finais</b></a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula4 - Diagrama de Classes.pptx"> Aula 4 - Diagrama de Classes</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula5 - SequênciaComunicação.pptx"> Aula 5 - Diagramas de Sequência e Comunicação</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula6 - Estados.pptx"> Aula 6 - Diagrama de Estados</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula7 - Atividades.pptx"> Aula 7 - Diagrama de Atividades</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula8 - ResumoDiagramas.pdf"> Aula 8 - Resumo dos Diagramas UML</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula9 - Arquitetura de SW.pptx"> Aula 9 - Arquitetura de Software</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula10- SistemasDeControleDeVersao.pdf"> Aula 10 - Sistemas de Controle de Versão</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula11 - ArgoUML_casos.pdf"> Aula 11 - ArgoUML: Diagrama de Casos de Uso</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula11- ArgoUML_classes.pdf"> Aula 11 - ArgoUML: Diagrama de Classes</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula12 - Conceitos de lab-poo.pdf"> Aula 12 - Conceitos de lab-poo</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula13 - Classes E Relacionamentos.pdf"> Aula 13 - Classes e Relacionamentos</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula14 - Membros de Classes.pdf"> Aula 14 - Membros de Classes</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula15 - Idiomas de Programacao.pdf"> Aula 15 - Idiomas de Programação</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Aula16 - Componentes_Implantacao.pdf"> Aula 16 - Diagrama de Componentes e Implantação</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/trab_modelagem.pdf"> Trabalho Final</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/P1-HealthWatcher.pdf"> Projeto 1: Health-Watcher</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/P2-SigaEnsino.pdf"> Projeto 2: SIGA Ensino</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/P3-Voos.pdf"> Projeto 3: Sistema de Voos</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/P4-Systrack.pdf"> Projeto 4: Systrack</a></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/aula5.pdf"> Aula 5</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/aula6.pdf"> Aula 6</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/aula7.pdf"> Aula 7</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/aula8.pdf"> Aula 8</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/aula9.pdf"> Aula 9</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/aula10.pdf"> Aula 10</a></li>-->
-						</ul>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Nc2W4q3h9E0"> Ver Videoaula </a>)</li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/As_VeBHQLlo"> Ver Videoaula </a>)</li>-->
+					</ul>
 					</div>
 					<!-- <div>
 					<b>Videoaulas:</b> 
@@ -212,7 +173,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	   
 	<!--<div class="fh5co-navigation">
 		<div class="fh5co-cover prev fh5co-cover-sm" style="background-image: url(images/project-4.jpg)">
 			<div class="overlay"></div>
