--- a/gsi526.html
+++ b/gsi526.html
@@ -90,7 +90,7 @@
 					<li>Prova 1 - 25 pts <b>(09/05)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04 e 05</i></li>-->
 					<li>Prova 2 - 30 pts <b>(06/06)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 06, 07, 08, 09 e 10</i></li>-->
 					<li>Prova 3 - 30 pts <b>(14/07)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 11, 12, 13, 14, 15 e 16</i></li>-->
-					<li>Lista 1 - 5 pts <b>(09/05)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li>-->
+					<li>Lista 1 - 5 pts <b>(09/05)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li>Lista 2 - 5 pts <b>(06/06)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li>-->
 					<li>Lista 3 - 5 pts <b>(14/07)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					</ul>
@@ -155,12 +155,12 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/0a7_beBYw58"> Aula de Exercícios sobre DevOps e Padrões de Projeto</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div>-->
-					<!--<div>
+					<div>
 					<b>Listas:</b> 
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>02/12</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>10/01</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li> 
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>14/02</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>09/05</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>10/01</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li>--> 
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>14/02</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
@@ -171,9 +171,9 @@
 					<!-- <li><i class="icon-stackoverflow"></i><a href="https://www.w3schools.com/"> Tutorial sobre PHP, JavaScript, HTML, CSS</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/GWT-Tutorial.pdf"> Tutorial: Como instalar o plugin do GWT no Eclipse IDE</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
-					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li> 
+					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li> -->
 					</ul>
-					</div>-->
+					</div>
 				</div> 
 			</div>
 		</div>
