--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -172,6 +172,7 @@
 					<li><a href="https://www.youtube.com/watch?v=_y7rKxqPoyg&list=PLQCmSnNFVYnTD5p2fR4EXmtlR6jQJMbPb"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Curso de AngularJS para Completos Iniciantes</a></li>
 					<li><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw&t=714s"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Videoaula sobre como criar um Blog usando Node.js e React</a></li>
 					<li><a href="https://www.youtube.com/watch?v=R-F-UcDo_5I&list=PL62G310vn6nF3gssjqfCKLpTK2sZJ_a_1"> <img src="images/youtube.png" alt="" height="20" width="27"> [Java] Curso Completo do framework Java Spring Boot</a></li>
+					<li><a href="https://www.youtube.com/watch?v=fm4_EuCsQwg"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Começando com Node.js em 2022</a></li>
 					</ul>
 					</div> 
 					<div>
