--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -123,9 +123,10 @@
 					<b>Material:</b>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/cl46EoiPt80"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - Git</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - GIT</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/z-bTz9Z9cnI"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 04 - CSS.pdf"> Aula 04 - CSS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gp2YM3Y9nYs"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 04 - CSS.pdf"> Aula 04 - CSS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gp2YM3Y9nYs"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="https://nodejs.dev/learn/introduction-to-nodejs"> Aula 05 - NODE.JS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=fm4_EuCsQwg"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 05 - JavaScript.pdf"> Aula 05 - JavaScript</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Tutorial GWT.pdf"> Aula 06 - Tutorial de GWT</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Plugin GWT.pdf"> Aula 06 - Plugin do GWT (Instalação) </a></button></li>
@@ -172,7 +173,6 @@
 					<li><a href="https://www.youtube.com/watch?v=_y7rKxqPoyg&list=PLQCmSnNFVYnTD5p2fR4EXmtlR6jQJMbPb"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Curso de AngularJS para Completos Iniciantes</a></li>
 					<li><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw&t=714s"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Videoaula sobre como criar um Blog usando Node.js e React</a></li>
 					<li><a href="https://www.youtube.com/watch?v=R-F-UcDo_5I&list=PL62G310vn6nF3gssjqfCKLpTK2sZJ_a_1"> <img src="images/youtube.png" alt="" height="20" width="27"> [Java] Curso Completo do framework Java Spring Boot</a></li>
-					<li><a href="https://www.youtube.com/watch?v=fm4_EuCsQwg"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Começando com Node.js em 2022</a></li>
 					</ul>
 					</div> 
 					<div>
