--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -167,6 +167,7 @@
 					<li><a href="https://programacaodescomplicada.wordpress.com/indice/python/"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Curso gratuito de Python</a></li>
 					<li><a href="https://www.youtube.com/watch?v=-YlK0A8Goj8"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Videoaula sobre Django 2 Web Framework</a></li>
 					<li><a href="https://www.youtube.com/watch?v=Dzuiy-JNi-E"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Criando um Blog com Python e o framework Django</a></li>
+					<li><a href="https://evolutio.io/curso/flask_by_juliarizza"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Curso de Flask para Completos Iniciantes</a></li>
 					<li><a href="https://evolutio.io/curso/ngmasters_javascript"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Curso Completo de JavaScript</a></li>
 					<li><a href="https://evolutio.io/curso/minicurso_vuejs"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Curso de Vue.js para Completos Iniciantes</a></li>
 					<li><a href="https://www.youtube.com/watch?v=ErjWNvP6mko"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Curso de React para Completos Iniciantes</a></li>
